# server/public/swagger.json
@@ -1,4 +1,5 @@
 {
+	"openapi": "3.0.0",
 	"components": {
 		"examples": {},
 		"headers": {},
@@ -53,9 +54,50 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"Pick_IUser.Exclude_keyofIUser.isEmailVerified-or-status-or-reset_password_token-or-confirmationCode__": {
+				"properties": {
+					"firstName": {
+						"type": "string"
+					},
+					"lastName": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					},
+					"avatar": {
+						"type": "string"
+					},
+					"role": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"firstName",
+					"lastName",
+					"email",
+					"password",
+					"role"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_IUser.isEmailVerified-or-status-or-reset_password_token-or-confirmationCode_": {
+				"$ref": "#/components/schemas/Pick_IUser.Exclude_keyofIUser.isEmailVerified-or-status-or-reset_password_token-or-confirmationCode__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"ICreateUserDto": {
+				"$ref": "#/components/schemas/Omit_IUser.isEmailVerified-or-status-or-reset_password_token-or-confirmationCode_"
+			},
 			"Pick_CreatedUser.Exclude_keyofCreatedUser.password-or-reset_password_token-or-confirmationCode__": {
 				"properties": {
-					"_id": {
+					"isEmailVerified": {
+						"type": "boolean"
+					},
+					"status": {
 						"type": "string"
 					},
 					"firstName": {
@@ -70,24 +112,21 @@
 					"avatar": {
 						"type": "string"
 					},
-					"isEmailVerified": {
-						"type": "boolean"
-					},
 					"role": {
 						"type": "string"
 					},
-					"status": {
+					"_id": {
 						"type": "string"
 					}
 				},
 				"required": [
-					"_id",
+					"isEmailVerified",
+					"status",
 					"firstName",
 					"lastName",
 					"email",
-					"isEmailVerified",
 					"role",
-					"status"
+					"_id"
 				],
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
@@ -98,6 +137,93 @@
 			},
 			"IUserResponse": {
 				"$ref": "#/components/schemas/Omit_CreatedUser.password-or-reset_password_token-or-confirmationCode_"
+			},
+			"Partial_IUser_": {
+				"properties": {
+					"firstName": {
+						"type": "string"
+					},
+					"lastName": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					},
+					"avatar": {
+						"type": "string"
+					},
+					"isEmailVerified": {
+						"type": "boolean"
+					},
+					"role": {
+						"type": "string"
+					},
+					"status": {
+						"type": "string"
+					},
+					"reset_password_token": {
+						"type": "string"
+					},
+					"confirmationCode": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"description": "Make all properties in T optional"
+			},
+			"CreatedUser": {
+				"properties": {
+					"firstName": {
+						"type": "string"
+					},
+					"lastName": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					},
+					"avatar": {
+						"type": "string"
+					},
+					"isEmailVerified": {
+						"type": "boolean"
+					},
+					"role": {
+						"type": "string"
+					},
+					"status": {
+						"type": "string"
+					},
+					"reset_password_token": {
+						"type": "string"
+					},
+					"confirmationCode": {
+						"type": "string"
+					},
+					"_id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"firstName",
+					"lastName",
+					"email",
+					"password",
+					"isEmailVerified",
+					"role",
+					"status",
+					"reset_password_token",
+					"confirmationCode",
+					"_id"
+				],
+				"type": "object",
+				"additionalProperties": false
 			},
 			"IConversation": {
 				"properties": {
@@ -154,16 +280,16 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Types.ObjectId": {
+			"mongoose.Types.ObjectId": {
 				"type": "string"
 			},
 			"CreatePayload": {
 				"properties": {
 					"receiver": {
-						"$ref": "#/components/schemas/Types.ObjectId"
+						"$ref": "#/components/schemas/mongoose.Types.ObjectId"
 					},
 					"sender": {
-						"$ref": "#/components/schemas/Types.ObjectId"
+						"$ref": "#/components/schemas/mongoose.Types.ObjectId"
 					}
 				},
 				"required": [
@@ -186,6 +312,9 @@
 					"type": {
 						"type": "string"
 					},
+					"file": {
+						"type": "string"
+					},
 					"messageText": {
 						"type": "string"
 					},
@@ -198,8 +327,28 @@
 					"fromUser",
 					"toUser",
 					"type",
+					"file",
 					"messageText",
 					"conversationId"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IContact": {
+				"properties": {
+					"_id": {
+						"type": "string"
+					},
+					"members": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"_id",
+					"members"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -217,7 +366,6 @@
 			"name": "tamlv"
 		}
 	},
-	"openapi": "3.0.0",
 	"paths": {
 		"/auth/registration": {
 			"post": {
@@ -232,13 +380,16 @@
 										"user": {
 											"$ref": "#/components/schemas/IUser"
 										},
-										"token": {
+										"refreshToken": {
+											"type": "string"
+										},
+										"accessToken": {
 											"type": "string"
 										}
 									},
 									"required": [
 										"user",
-										"token"
+										"accessToken"
 									],
 									"type": "object"
 								}
@@ -253,7 +404,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/IUser"
+								"$ref": "#/components/schemas/ICreateUserDto"
 							}
 						}
 					}
@@ -273,13 +424,17 @@
 										"user": {
 											"$ref": "#/components/schemas/IUser"
 										},
-										"token": {
+										"refreshToken": {
+											"type": "string"
+										},
+										"accessToken": {
 											"type": "string"
 										}
 									},
 									"required": [
 										"user",
-										"token"
+										"refreshToken",
+										"accessToken"
 									],
 									"type": "object"
 								}
@@ -311,6 +466,46 @@
 						}
 					}
 				}
+			}
+		},
+		"/auth/refreshToken/{refreshToken}": {
+			"post": {
+				"operationId": "Refresh",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"refreshToken": {
+											"type": "string"
+										},
+										"accessToken": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"refreshToken",
+										"accessToken"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "refreshToken",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/auth/confirm/{confirmationCode}": {
@@ -425,7 +620,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/IUser"
+								"$ref": "#/components/schemas/Partial_IUser_"
 							}
 						}
 					}
@@ -450,6 +645,37 @@
 					{
 						"in": "path",
 						"name": "userId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/user/search/{searchValue}": {
+			"get": {
+				"operationId": "Search",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/CreatedUser"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "searchValue",
 						"required": true,
 						"schema": {
 							"type": "string"
@@ -628,6 +854,140 @@
 					{
 						"in": "path",
 						"name": "conversationId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/contact": {
+			"get": {
+				"operationId": "Get",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/IContact"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			},
+			"post": {
+				"operationId": "Create",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IContact"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"type": "string"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/contact/user/{userId}": {
+			"get": {
+				"operationId": "GetContactByUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/IContact"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/contact/{contactId}": {
+			"get": {
+				"operationId": "GetContactById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IContact"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "contactId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"delete": {
+				"operationId": "DeleteContact",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IContact"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "contactId",
 						"required": true,
 						"schema": {
 							"type": "string"
